# autoproset

./: .gitignore  Makefile  Makefile.in  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  main.c
src/.deps/: autoProset-func.Po  autoProset-main.Po  autoProset.Po
src/func/: func.c  func.h
